[java-tostring] Cleanup
GitOrigin-RevId: 203530e43cd765513c970d9d82f05ce4348a757b